syntax = "proto3";

package password;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;

message Error {
  int32 code = 1;
  string message = 2;
}

// Request / Response

message PasswordReq {
  string password = 1;
  string hash = 2;
}

message EncodedPasswordRes {
  Error error = 1;
  string hash = 2;
}

message PasswordValidationRes {
  Error error = 1;
  bool valid = 2;
}
